Removing GetPrinterCapsAndDefaults for Chrome OS builds

GetPrinterCapsAndDefaults is dead code in Chrome OS, and was causing
build failures with the update to CUPS 2.2.8 so it is being removed.

R=skau@chromium.org

Bug: 886932
Change-Id: Ic21dd3db15e7cfd225000dd6db4d59157aa5c385
Reviewed-on: https://chromium-review.googlesource.com/c/1258511
Commit-Queue: David Valleau <valleau@chromium.org>
Reviewed-by: Sean Kau <skau@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598479}