printing/backend/print_backend_chromeos.cc
@@ -54,8 +54,6 @@ class PrintBackendChromeOS : public PrintBackend {
   bool GetPrinterSemanticCapsAndDefaults(
       const std::string& printer_name,
       PrinterSemanticCapsAndDefaults* printer_info) override;
-  bool GetPrinterCapsAndDefaults(const std::string& printer_name,
-                                 PrinterCapsAndDefaults* printer_info) override;
   std::string GetPrinterDriverInfo(const std::string& printer_name) override;
   bool IsValidPrinter(const std::string& printer_name) override;
 
@@ -77,13 +75,6 @@ bool PrintBackendChromeOS::GetPrinterBasicInfo(const std::string& printer_name,
 bool PrintBackendChromeOS::GetPrinterSemanticCapsAndDefaults(
     const std::string& printer_name,
     PrinterSemanticCapsAndDefaults* printer_info) {
-  NOTREACHED();
-  return false;
-}
-
-bool PrintBackendChromeOS::GetPrinterCapsAndDefaults(
-    const std::string& printer_name,
-    PrinterCapsAndDefaults* printer_info) {
   NOTREACHED();
   return false;
 }
